--- a/Pixed.Application/ControlThemes.axaml
+++ b/Pixed.Application/ControlThemes.axaml
@@ -184,12 +184,11 @@
 		</Style>
 	</ControlTheme>
 	<ControlTheme x:Key="LayersListBoxItem" TargetType="ListBoxItem">
-		<Setter Property="Background" Value="Transparent" />
 		<Setter Property="Padding" Value="4" />
 		<Setter Property="Template">
 			<ControlTemplate>
 				<ContentPresenter Name="PART_ContentPresenter"
-								  Background="{TemplateBinding Background}"
+								  Background="{StaticResource BaseBackground}"
 								  BorderBrush="{TemplateBinding BorderBrush}"
 								  BorderThickness="{TemplateBinding BorderThickness}"
 								  CornerRadius="{TemplateBinding CornerRadius}"
@@ -201,40 +200,40 @@
 			</ControlTemplate>
 		</Setter>
 		<Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-			<Setter Property="Background" Value="{DynamicResource SystemControlHighlightListLowBrush}" />
-			<Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+      <Setter Property="Background" Value="{StaticResource Accent}" />
+      <Setter Property="Foreground" Value="{DynamicResource White}" />
 		</Style>
 
 		<!--  Pressed State  -->
 		<Style Selector="^:pressed /template/ ContentPresenter#PART_ContentPresenter">
-			<Setter Property="Background" Value="{DynamicResource SystemControlHighlightListMediumBrush}" />
-			<Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+      <Setter Property="Background" Value="{StaticResource Accent}" />
+      <Setter Property="Foreground" Value="{DynamicResource White}" />
 		</Style>
 
 		<!--  Selected State  -->
 		<Style Selector="^:selected">
 
 			<Style Selector="^ /template/ ContentPresenter#PART_ContentPresenter">
-				<Setter Property="Background" Value="{DynamicResource SystemControlHighlightListAccentLowBrush}" />
-				<Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+				<Setter Property="Background" Value="{StaticResource Accent}" />
+				<Setter Property="Foreground" Value="{DynamicResource White}" />
 			</Style>
 
 			<!--  Selected Unfocused State  -->
 			<Style Selector="^:not(:focus) /template/ ContentPresenter#PART_ContentPresenter">
-				<Setter Property="Background" Value="{DynamicResource SystemControlHighlightListAccentLowBrush}" />
-				<Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+        <Setter Property="Background" Value="{StaticResource Accent}" />
+        <Setter Property="Foreground" Value="{DynamicResource White}" />
 			</Style>
 
 			<!--  Selected PointerOver State  -->
 			<Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-				<Setter Property="Background" Value="{DynamicResource SystemControlHighlightListAccentMediumBrush}" />
-				<Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+        <Setter Property="Background" Value="{StaticResource Accent}" />
+        <Setter Property="Foreground" Value="{DynamicResource White}" />
 			</Style>
 
 			<!--  Selected Pressed State  -->
 			<Style Selector="^:pressed /template/ ContentPresenter#PART_ContentPresenter">
-				<Setter Property="Background" Value="{DynamicResource SystemControlHighlightListAccentHighBrush}" />
-				<Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+        <Setter Property="Background" Value="{StaticResource Accent}" />
+        <Setter Property="Foreground" Value="{DynamicResource White}" />
 			</Style>
 		</Style>
 	</ControlTheme>
