--- a/Pixed.Application/Controls/TitleBar.axaml
+++ b/Pixed.Application/Controls/TitleBar.axaml
@@ -9,7 +9,7 @@
 	<Grid
             x:Name="titleBar"
             Grid.Row="0"
-            ColumnDefinitions="Auto,Auto,*,Auto">
+            ColumnDefinitions="Auto,Auto,*,Auto" RowDefinitions="46">
 		<Image
 			x:Name="icon"
 			Grid.Column="0"
