--- a/Pixed.Application/Controls/MainWindowSections/FramesSection.axaml
+++ b/Pixed.Application/Controls/MainWindowSections/FramesSection.axaml
@@ -27,19 +27,19 @@
         <RowDefinition Height="32"/>
       </Grid.RowDefinitions>
       <controls:TouchButton Command="{Binding NewFrameCommand}" Theme="{StaticResource BaseButton}">
-        <Image Source="avares://Pixed.Application/Resources/Icons/plus.png" Width="16" Height="16"/>
+        <Image Source="{SvgImage avares://Pixed.Application/Resources/fluent-icons/ic_fluent_add_48_regular.svg}" Width="16" Height="16"/>
         <ToolTip.Tip>
           <controls:TextTooltip Text="New frame"/>
         </ToolTip.Tip>
       </controls:TouchButton>
 		<controls:TouchButton Grid.Column="1" Command="{Binding DuplicateFrameCommand}" Theme="{StaticResource BaseButton}">
-        <Image Source="avares://Pixed.Application/Resources/Icons/files-empty.png" Width="16" Height="16"/>
+        <Image Source="{SvgImage avares://Pixed.Application/Resources/fluent-icons/ic_fluent_document_copy_48_regular.svg}" Width="16" Height="16"/>
         <ToolTip.Tip>
           <controls:TextTooltip Text="Duplicate frame"/>
         </ToolTip.Tip>
       </controls:TouchButton>
 		<controls:TouchButton Grid.Column="2" Command="{Binding RemoveFrameCommand}" IsEnabled="{Binding RemoveFrameEnabled}" Theme="{StaticResource BaseButton}">
-			<Image Source="avares://Pixed.Application/Resources/Icons/bin.png" Width="16" Height="16"/>
+			<Image Source="{SvgImage avares://Pixed.Application/Resources/fluent-icons/ic_fluent_delete_48_regular.svg}" Width="16" Height="16"/>
 			<ToolTip.Tip>
 				<controls:TextTooltip Text="Remove frame"/>
 			</ToolTip.Tip>
