--- a/Pixed.Application/Pages/PaletteList.axaml
+++ b/Pixed.Application/Pages/PaletteList.axaml
@@ -35,15 +35,15 @@
                 <Image Source="{Binding BitmapImage}" Grid.Row="1"/>
                 <Button Grid.Column="1" Grid.Row="1" BorderThickness="0" Background="Transparent" Command="{Binding SelectCommand}" CommandParameter="{Binding Model}">
 
-                  <Image Source="avares://Pixed.Application/Resources/Icons/checkmark.png"/>
+                  <Image Source="{SvgImage avares://Pixed.Application/Resources/fluent-icons/ic_fluent_checkmark_48_regular.svg}"/>
                 </Button>
                 <Button Grid.Column="2" Grid.Row="1" BorderThickness="0" Background="Transparent" Command="{Binding RenameCommand}" CommandParameter="{Binding Model}">
 
-                  <Image Source="avares://Pixed.Application/Resources/Icons/pencil.png"/>
+                  <Image Source="{SvgImage avares://Pixed.Application/Resources/fluent-icons/ic_fluent_pen_48_regular.svg}"/>
                 </Button>
                 <Button Grid.Column="3" Grid.Row="1" BorderThickness="0" Background="Transparent" Command="{Binding RemoveCommand}" CommandParameter="{Binding Model}">
 
-                  <Image Source="avares://Pixed.Application/Resources/Icons/bin.png"/>
+                  <Image Source="{SvgImage avares://Pixed.Application/Resources/fluent-icons/ic_fluent_delete_48_regular.svg}"/>
                 </Button>
               </Grid>
             </DataTemplate>
