--- a/Pixed.Application/Colors.axaml
+++ b/Pixed.Application/Colors.axaml
@@ -7,7 +7,7 @@
 			<Border Background="{StaticResource ButtonBackground}" BorderBrush="{StaticResource Accent}" BorderThickness="2" Width="128" Height="128"/>
 		</StackPanel>
 	</Design.PreviewWith>
-	<Color x:Key="ButtonBorder">#2c2c2c</Color>
+	<Color x:Key="ButtonBorder">#444444</Color>
   <Color x:Key="BaseBorder">#444444</Color>
 	<Color x:Key="BaseBackground">#212121</Color>
 	<Color x:Key="BaseBackgroundHover">#424242</Color>
