--- a/Pixed.Application/Windows/SplashWindow.axaml
+++ b/Pixed.Application/Windows/SplashWindow.axaml
@@ -11,18 +11,24 @@
         CanResize="False" 
 		WindowStartupLocation="CenterScreen"
 		Width="200"
-		Height="200"
+		Height="300"
+		CornerRadius="16"
 		Background="Transparent">
-	<Border CornerRadius="16" Background="{StaticResource BaseBackground}">
+	<Border CornerRadius="16" Background="{StaticResource Accent}">
 		<Grid>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="200"/>
+				<RowDefinition Height="100"/>
+			</Grid.RowDefinitions>
 			<Image Source="/Resources/icon256.png" Width="200" Height="200"/>
-			<progRing:ProgressRing Width="180"
-							   Height="180"
+			<progRing:ProgressRing Width="70"
+							   Height="70"
 							   IsActive="True"
 							   HorizontalAlignment="Center"
 							   VerticalAlignment="Center"
 							   Foreground="White"
-							   Margin="10,20,0,0"/>
+							   Margin="10,20,0,0"
+								   Grid.Row="1"/>
 		</Grid>
 	</Border>
 </Window>
