--- a/Pixed.Application/Routing/RouterControl.axaml
+++ b/Pixed.Application/Routing/RouterControl.axaml
@@ -29,5 +29,6 @@
     <Route Path="exportPng" Page="windows:ExportPNG" Type="Modal"/>
     <Route Path="openPng" Page="windows:OpenPNG" Type="Modal"/>
 	<Route Path="openSvg" Page="windows:OpenSVG" Type="Modal"/>
+	<Route Path="loadLayer" Page="windows:LoadLayer" Type="Modal"/>
   </ShellView>
 </UserControl>
