Transparent background artifacts fix; frame preview blinking fix (#195)

--- a/Pixed.Application/Controls/TitleBar.axaml
+++ b/Pixed.Application/Controls/TitleBar.axaml
@@ -29,7 +29,7 @@
 				 FontSize="14"
 				 FontWeight="Bold"
 				 Foreground="White"
-				 HorizontalAlignment="Stretch"
+				 HorizontalAlignment="Center"
 				 TextAlignment="Center"
 				 VerticalAlignment="Center"
 				 IsHitTestVisible="False"
