--- a/Pixed.Application/Controls/LayerListControl.axaml
+++ b/Pixed.Application/Controls/LayerListControl.axaml
@@ -18,7 +18,7 @@
 		  <Grid.Background>
 			  <ImageBrush Source="avares://Pixed.Application/Resources/transparentBackground.png"/>
 		  </Grid.Background>
-		  <local:SkiaImage Width="32" Height="32" Source="{Binding RenderSource}" RenderOptions.BitmapInterpolationMode="None"/>
+      <local:PixelImageControl Width="32" Height="32" Source="{Binding}" RenderOptions.BitmapInterpolationMode="None"/>
 	  </Grid>
     <TextBlock Grid.Column="1" Text="{Binding Name}" Foreground="White" VerticalAlignment="Center" Margin="4"/>
     <Button Grid.Column="2" Command="{Binding ChangeOpacityCommand}">
