--- a/Pixed.Application/App.axaml
+++ b/Pixed.Application/App.axaml
@@ -21,6 +21,7 @@
           <ResourceInclude Source="/Themes/ToolButton.axaml"/>
           <ResourceInclude Source="/Themes/ToolRadio.axaml"/>
           <ResourceInclude Source="/Themes/ToolRadioCustom.axaml"/>
+		  <ResourceInclude Source="/Themes/TopLevelMenuItem.axaml"/>
         </ResourceDictionary.MergedDictionaries>
       </ResourceDictionary>
     </Application.Resources>
