--- a/Pixed.Application/Controls/TitleBar.axaml
+++ b/Pixed.Application/Controls/TitleBar.axaml
@@ -6,34 +6,36 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Pixed.Application.Controls.TitleBar"
 			 DockPanel.Dock="Top">
-	<Grid
+	<ScrollViewer AllowAutoHide="True" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto">
+		<Grid
             x:Name="titleBar"
             Grid.Row="0"
             ColumnDefinitions="Auto,Auto,*,Auto" RowDefinitions="46">
-		<Image
-			x:Name="icon"
-			Grid.Column="0"
-			Width="24"
-			Height="24"
-			Margin="5,0,0,0"
-			HorizontalAlignment="Center"
-			VerticalAlignment="Center"
-			IsVisible="{OnPlatform Default=False,
+			<Image
+				x:Name="icon"
+				Grid.Column="0"
+				Width="24"
+				Height="24"
+				Margin="5,0,0,0"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				IsVisible="{OnPlatform Default=False,
                                        Windows=True}"
-			Source="avares://Pixed.Application/Resources/icon.png" />
+				Source="avares://Pixed.Application/Resources/icon.png" />
 
-		<DockPanel Grid.Column="1" HorizontalAlignment="Left">
-			<Menu VerticalAlignment="Center" DockPanel.Dock="Left" ItemsSource="{Binding Menu, RelativeSource={RelativeSource FindAncestor, AncestorType=local:TitleBar}}"/>
-		</DockPanel>
-		<TextBlock Text="{Binding Title, RelativeSource={RelativeSource FindAncestor, AncestorType=local:TitleBar}}"
-				 FontSize="14"
-				 FontWeight="Bold"
-				 Foreground="White"
-				 HorizontalAlignment="Center"
-				 TextAlignment="Center"
-				 VerticalAlignment="Center"
-				 IsHitTestVisible="False"
-				 Grid.Column="2"/>
-		<Grid Width="140" Grid.Column="3" IsVisible="{OnPlatform Windows=True, Default=False}"/>
-	</Grid>
+			<DockPanel Grid.Column="1" HorizontalAlignment="Left">
+				<Menu VerticalAlignment="Center" DockPanel.Dock="Left" ItemsSource="{Binding Menu, RelativeSource={RelativeSource FindAncestor, AncestorType=local:TitleBar}}"/>
+			</DockPanel>
+			<TextBlock Text="{Binding Title, RelativeSource={RelativeSource FindAncestor, AncestorType=local:TitleBar}}"
+					 FontSize="14"
+					 FontWeight="Bold"
+					 Foreground="White"
+					 HorizontalAlignment="Center"
+					 TextAlignment="Center"
+					 VerticalAlignment="Center"
+					 IsHitTestVisible="False"
+					 Grid.Column="2"/>
+			<Grid Width="140" Grid.Column="3" IsVisible="{OnPlatform Windows=True, Default=False}"/>
+		</Grid>
+	</ScrollViewer>
 </UserControl>
