--- a/Pixed.Application/Pages/Main.axaml
+++ b/Pixed.Application/Pages/Main.axaml
@@ -23,17 +23,13 @@
 		<mainsections:ToolsSection x:Name="toolsSection"/>
 		<Grid x:Name="mainSection" Grid.Column="1">
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="124"/>
 				<ColumnDefinition Width="auto"/>
-				<!-- Open/close button-->
 				<ColumnDefinition Width="*"/>
-				<ColumnDefinition Width="auto"/>
-				<!-- Open/close button-->
 				<ColumnDefinition Width="auto"/>
 			</Grid.ColumnDefinitions>
 
 			<mainsections:FramesSection/>
-			<Grid Name="centerPanel" Grid.Column="2">
+			<Grid Name="centerPanel" Grid.Column="1">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="32"/>
 					<RowDefinition Height="*"/>
@@ -41,14 +37,7 @@
 				<mainsections:ProjectsSection/>
 				<controls:PaintCanvas Grid.Row="1" x:Name="paintCanvas"/>
 			</Grid>
-
-			<ScrollViewer Grid.Column="4" Width="242" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto" Theme="{StaticResource HandledFixScrollViewer}">
-				<StackPanel Name="rightPanel" Grid.Column="4" Width="242" HorizontalAlignment="Stretch">
-					<mainsections:AnimationSection/>
-					<mainsections:PaletteSection/>
-					<mainsections:LayersSection/>
-				</StackPanel>
-			</ScrollViewer>
+			<mainsections:PropertiesSection Grid.Column="2" Width="242"/>
 		</Grid>
 	</Grid>
 </Page>
