--- a/Pixed.Application/App.axaml
+++ b/Pixed.Application/App.axaml
@@ -12,6 +12,7 @@
           <ResourceInclude Source="/Themes/CaptionButtons.axaml"/>
           <ResourceInclude Source="/Themes/ColorPicker.axaml"/>
           <ResourceInclude Source="/Themes/CrossButton.axaml"/>
+		  <ResourceInclude Source="/Themes/FlyingButton.axaml"/>
           <ResourceInclude Source="/Themes/FrameListBoxItem.axaml"/>
           <ResourceInclude Source="/Themes/HandledFixScrollViewer.axaml"/>
           <ResourceInclude Source="/Themes/LayersListBoxItem.axaml"/>
