--- a/Pixed.Application/Pages/PaletteList.axaml
+++ b/Pixed.Application/Pages/PaletteList.axaml
@@ -7,7 +7,7 @@
 		xmlns:viewmodels="clr-namespace:Pixed.Application.ViewModels" 
 		xmlns:controls="clr-namespace:Pixed.Application.Controls"
         mc:Ignorable="d"
-        Title="Palette list" Height="600" Width="800" 
+        Title="Palette list"
 		x:DataType="viewmodels:PaletteListViewModel">
   <local:Modal.Dialog>
     <Grid>
@@ -32,17 +32,14 @@
                   <ColumnDefinition Width="40"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="{Binding Name}" FontWeight="Bold" Foreground="White" Grid.ColumnSpan="4"/>
-                <Image Source="{Binding BitmapImage}" Grid.Row="1"/>
+                <Image Source="{Binding BitmapImage}" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" MaxWidth="200"/>
                 <Button Grid.Column="1" Grid.Row="1" BorderThickness="0" Background="Transparent" Command="{Binding SelectCommand}" CommandParameter="{Binding Model}">
-
                   <Image Source="{SvgImage avares://Pixed.Application/Resources/fluent-icons/ic_fluent_checkmark_48_regular.svg}"/>
                 </Button>
                 <Button Grid.Column="2" Grid.Row="1" BorderThickness="0" Background="Transparent" Command="{Binding RenameCommand}" CommandParameter="{Binding Model}">
-
                   <Image Source="{SvgImage avares://Pixed.Application/Resources/fluent-icons/ic_fluent_pen_48_regular.svg}"/>
                 </Button>
                 <Button Grid.Column="3" Grid.Row="1" BorderThickness="0" Background="Transparent" Command="{Binding RemoveCommand}" CommandParameter="{Binding Model}">
-
                   <Image Source="{SvgImage avares://Pixed.Application/Resources/fluent-icons/ic_fluent_delete_48_regular.svg}"/>
                 </Button>
               </Grid>
