209 improve closing panels (#211)
* Force landscape orientation if screen will be smaller than minimum width value; TODO check on android

* Android change orientation when screen is too small

* Hide pane

--- a/Pixed.Application/App.axaml
+++ b/Pixed.Application/App.axaml
@@ -18,6 +18,7 @@
           <ResourceInclude Source="/Themes/LayersListBoxItem.axaml"/>
           <ResourceInclude Source="/Themes/MainPage.axaml"/>
           <ResourceInclude Source="/Themes/NoGesturesScrollViewer.axaml"/>
+		  <ResourceInclude Source="/Themes/ShellView.axaml"/>
           <ResourceInclude Source="/Themes/TabStripItem.axaml"/>
           <ResourceInclude Source="/Themes/ToolButton.axaml"/>
           <ResourceInclude Source="/Themes/ToolRadio.axaml"/>
