--- a/Pixed.Application/Controls/PaintCanvas.axaml
+++ b/Pixed.Application/Controls/PaintCanvas.axaml
@@ -32,8 +32,8 @@
                     PointerPressed="Canvas_PointerPressed"
                     PointerReleased="Canvas_PointerReleased"
                     PointerWheelChanged="Canvas_PointerWheelChanged"
-              RenderOptions.BitmapInterpolationMode="None"
-              Background="{Binding TransparentBrush}">
+              RenderOptions.BitmapInterpolationMode="None">
+              <controls:TransparentBackground IsHitTestVisible="False" Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="transparentBackground"/>
               <controls:PixelImageControl Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding RenderModel}"/>
               <controls:ImageGrid Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="gridCanvas" IsHitTestVisible="False"/>
               <controls:SelectionOverlay Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="selectionOverlay" IsHitTestVisible="False"/>
