--- a/msi.wxs
+++ b/msi.wxs
@@ -24,11 +24,11 @@
 			</Directory>
 		</StandardDirectory>
 		<Feature Id="Pixed.Msi" Title="Pixed - Pixelart Editor" Description="Installer for Pixed - Pixelart Editor" Level="1" AllowAdvertise="no" ConfigurableDirectory="INSTALLLOCATION">
-			<Files Directory="INSTALLLOCATION" Include="build\Pixed.Windows\Deploy\**">
-				<Exclude Files="build\Pixed.Windows\Deploy\Pixed.exe"/>
+			<Files Directory="INSTALLLOCATION" Include="build\Deploy-win\**">
+				<Exclude Files="build\Deploy-win\Pixed.exe"/>
 			</Files>
 			<Component Directory="INSTALLLOCATION">
-				<File Source="build\Pixed.Windows\Deploy\Pixed.exe" KeyPath="yes">
+				<File Source="build\Deploy-win\Pixed.exe" KeyPath="yes">
 					<Shortcut Id="scC60EF6135229BA07A072F4333329ECAB" Name="Pixed - Pixelart Editor" Directory="DesktopFolder" Advertise="yes" />
 					<Shortcut Id="scC0F27A1BC981A2B97587AC99CDF411ED" Name="Pixed - Pixelart Editor" Directory="ProgramMenuFolder" Advertise="yes" />
 				</File>
