--- a/Pixed.Application/Controls/PaintCanvas.axaml
+++ b/Pixed.Application/Controls/PaintCanvas.axaml
@@ -22,23 +22,14 @@
 			Theme="{StaticResource NoGesturesScrollViewer}">
       <Border BorderBrush="{StaticResource Accent}" BorderThickness="0 2 0 0">
         <Border BorderBrush="{StaticResource ButtonBorder}" BorderThickness="2 0 2 2">
-          <zoom:ZoomBorder Name="zoomBorder" ZoomSpeed="1.2" ClipToBounds="True" GestureZoomEnabled="{Binding GestureZoomEnabled, Mode=TwoWay}">
-            <zoom:ZoomCanvas
-              Name="imageGrid"
-              Width="{Binding GridWidth, Mode=TwoWay}"
-              Height="{Binding GridHeight, Mode=TwoWay}"
-              PointerExited="Canvas_PointerExited"
-                    PointerMoved="Canvas_PointerMoved"
-                    PointerPressed="Canvas_PointerPressed"
-                    PointerReleased="Canvas_PointerReleased"
-                    PointerWheelChanged="Canvas_PointerWheelChanged"
-              RenderOptions.BitmapInterpolationMode="None">
+          <zoom:ZoomControl Name="zoomControl" GesturesEnabled="{Binding GestureZoomEnabled, Mode=TwoWay}" ZoomWidth="{Binding GridWidth, Mode=TwoWay}" ZoomHeight="{Binding GridHeight, Mode=TwoWay}">
+            <zoom:ZoomControl.ZoomContent>
               <controls:TransparentBackground IsHitTestVisible="False" Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="transparentBackground"/>
               <controls:PaintCanvasImageControl Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding RenderModel}"/>
               <controls:ImageGrid Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="gridCanvas" IsHitTestVisible="False"/>
               <controls:SelectionOverlay Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="selectionOverlay" IsHitTestVisible="False"/>
-            </zoom:ZoomCanvas>
-          </zoom:ZoomBorder>
+            </zoom:ZoomControl.ZoomContent>
+          </zoom:ZoomControl>
         </Border>
       </Border>
     </ScrollViewer>
