--- a/msi.wxs
+++ b/msi.wxs
@@ -1,4 +1,4 @@
-﻿<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs" xmlns:ui="http://wixtoolset.org/schemas/v4/wxs/ui">
+<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs" xmlns:ui="http://wixtoolset.org/schemas/v4/wxs/ui">
 	<!-- 
   MSIProductVersion is defined in Pixed.Msi.wixproj as 0.0.1 for local desktop builds.  
   You should pass in the MSBuild Property 'MSIProductVersion' to override it during an automated build.
@@ -7,7 +7,7 @@
   The Product@Id attribute (ProductCode Property) will be a random GUID for each build.  This is to support "Major Upgrades" where each install 
   is a seamless uninstall/reinstall.
   -->
-	<Package Name="Pixed - Pixelart Editor" Language="1033" Version="1.9.0.0" Manufacturer="Mateusz Nejman" UpgradeCode="304bbbda-4a63-42e3-b3dc-00689df0d256">
+	<Package Name="Pixed - Pixelart Editor" Language="1033" Version="1.10.0.0" Manufacturer="Mateusz Nejman" UpgradeCode="304bbbda-4a63-42e3-b3dc-00689df0d256">
 		<MediaTemplate EmbedCab="yes" />
 		<!-- Major Upgrade Rule to disallow downgrades -->
 		<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
